Fixed main page

--- a/public/index.html
+++ b/public/index.html
@@ -1,188 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!--Let browser know website is optimized for mobile-->
-  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <!--Let browser know website is optimized for mobile-->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <meta charset="UTF-8">
 
     <title>CS5610</title>
 
-	<!-- CSS  -->
-	<!--Import Google Icon Font-->
+    <!-- CSS  -->
+    <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 
 
 </head>
 <body>
 
-	<!--<video autoplay loop muted >-->
-		<!--<source src="https://youtu.be/BoP2In1qJxc" type="video/ogv">-->
-	<!--</video>-->
-	<nav class="grey darken-4" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SUNS</a>
-	     	<ul class="right hide-on-med-and-down">
-	        	<li><a target="_blank" href="https://github.com/suns1191">GitHub</a></li>
-	      	</ul>
+<!--<video autoplay loop muted >-->
+<!--<source src="https://youtu.be/BoP2In1qJxc" type="video/ogv">-->
+<!--</video>-->
+<nav class="grey darken-4" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SUNS</a>
+        <ul class="right hide-on-med-and-down">
+            <li><a target="_blank" href="https://github.com/suns1191">GitHub</a></li>
+        </ul>
 
-      		<ul id="nav-mobile" class="side-nav">
-        		<li><a href="https://github.com/suns1191/cs5610fall2015">GitHub</a></li>
-      		</ul>
-      		<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    	</div>
-  	</nav>
+        <ul id="nav-mobile" class="side-nav">
+            <li><a href="https://github.com/suns1191/cs5610fall2015">GitHub</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+</nav>
 
 
- <div class="section no-pad-bot" id="index-banner">
+<div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <br><br>
-      <h1 class="header center orange-text">CS5610 Web Development</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">This course discusses Web development for sites that are dynamic, data driven. It focuses on the software development issues of assorted data technologies, and Web interaction.</h5>
-      </div>
-      <div class="row center">
-        <a href="http://portal-cs5610online.rhcloud.com/" id="download-button" class="btn-large waves-effect waves-light orange">Course Website</a>
-      </div>
-      <br><br>
+        <br><br>
+        <h1 class="header center orange-text">CS5610 Web Development</h1>
+        <div class="row center">
+            <h5 class="header col s12 light">This course discusses Web development for sites that are dynamic, data driven. It focuses on the software development issues of assorted data technologies, and Web interaction.</h5>
+        </div>
+        <div class="row center">
+            <a href="http://portal-cs5610online.rhcloud.com/" id="download-button" class="btn-large waves-effect waves-light orange">Course Website</a>
+        </div>
+        <br><br>
 
     </div>
-  </div>
+</div>
 
 
-  	<div class="container">
+<div class="container">
 
-	    <br><br>
+    <br><br>
 
-	    <div class="section">
-			<div class="row">
-	        	<div class="col s12 m6">
-					<div class="card blue-grey darken-1">
-						<div class="card-content white-text">
-								<span class="card-title">User Interface Development</span>
-								<p>In this assignment I created a Website that will serve as a prototype of a Web
-									application that I will be working on throughout the assignments.</p>
-								<br/>
-								<p>The Web application I will be building throughout the assignments
-									is called Form Maker and it consists of a Website that allow users to create
-									forms and share them on the Web as single pages or embedded in their own Web pages.
-									I will refer to those users creating forms as Developers. Other users that visit the
-									Web pages or form pages can then fill in and submit the forms. I will refer to these
-									as Submitters. Developers can login to their account and see the results in tabular
-									format or download them as CSV files. The Web application will be built on the MEAN
-									stack using the four underpinning technologies MongoDB, Express, AngularJS, and Node.js.</p>
-								<br/>
-								<p>In this assignment I will get started creating the application by first focusing on
-									creating a static set of pages that will serve as a prototype of the final application.
-									The prototype will allow evaluating user interface aspects of the application such as
-									navigation, information layout, page dependencies, modalities, authentication and
-									authorization. Although the pages will have links, forms and buttons to interact with,
-									the application won't actually do anything yet. It will only be an empty shell for now.
-									I will add the functionality as I make progress through the rest of the assignments.</p>
-						</div>
-					<div class="card-action">
-						<div class="chip">
-							<a target="_blank" href="assignment/home.html">Link to Assignment 2</a>
-						</div>
-						<div class="chip">
-							<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
-						</div>
-					</div>
-				  </div>
-	        </div>
-				<div class="col s12 m6">
-				<div class="card blue-grey darken-1">
-					<div class="card-content white-text">
-						<span class="card-title">Client Side Development</span>
-						<p>In the previous assignment I used HTML, CSS, and Bootstrap to create a prototype
-							of a Web application. The application consisted of several Web static pages that allowed
-							us to consider navigation, page layout, look and feel. In this assignment you I used
-							jQuery, one of the most popular JavaScript libraries, to add many dynamic behaviours.
-							I also used AngularJS to convert the application into a single page application
-							and become familiar with the Model View Controller design pattern..</p>
-						<br/>
-					</div>
-					<div class="card-action">
-						<div class="chip">
-							<a target="_blank" href="assignment/index.html">Link to Assignment 3</a>
-						</div>
-						<div class="chip">
-							<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
-						</div>
-					</div>
-				</div>
-				</div>
-				<div class="col s12 m6">
-					<div class="card blue-grey darken-1">
-						<div class="card-content white-text">
-							<span class="card-title">Project Proof of Concept</span>
-							<br/>
-						</div>
-						<div class="card-action">
-							<div class="chip">
-								<a target="_blank" href="project/client/index.html">Link to POC</a>
-							</div>
-							<div class="chip">
-								<a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.4">GitHub Link</a>
-							</div>
-						</div>
-					</div>
-
-                    <div class="col s12 m6">
-                        <div class="card blue-grey darken-1">
-                            <div class="card-content white-text">
-                                <span class="card-title">Programming The Server</span>
-                                <br/>
-                            </div>
-                            <div class="card-action">
-                                <div class="chip">
-                                    <a target="_blank" href="assignment/client/index.html">Link to Assignment 3</a>
-                                </div>
-                                <div class="chip">
-                                    <a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.4">GitHub Link</a>
-                                </div>
-                            </div>
+    <div class="section">
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">User Interface Development</span>
+                        <p>In this assignment I created a Website that will serve as a prototype of a Web
+                            application that I will be working on throughout the assignments.</p>
+                        <br/>
+                        <p>The Web application I will be building throughout the assignments
+                            is called Form Maker and it consists of a Website that allow users to create
+                            forms and share them on the Web as single pages or embedded in their own Web pages.
+                            I will refer to those users creating forms as Developers. Other users that visit the
+                            Web pages or form pages can then fill in and submit the forms. I will refer to these
+                            as Submitters. Developers can login to their account and see the results in tabular
+                            format or download them as CSV files. The Web application will be built on the MEAN
+                            stack using the four underpinning technologies MongoDB, Express, AngularJS, and Node.js.</p>
+                        <br/>
+                        <p>In this assignment I will get started creating the application by first focusing on
+                            creating a static set of pages that will serve as a prototype of the final application.
+                            The prototype will allow evaluating user interface aspects of the application such as
+                            navigation, information layout, page dependencies, modalities, authentication and
+                            authorization. Although the pages will have links, forms and buttons to interact with,
+                            the application won't actually do anything yet. It will only be an empty shell for now.
+                            I will add the functionality as I make progress through the rest of the assignments.</p>
+                    </div>
+                    <div class="card-action">
+                        <div class="chip">
+                            <a target="_blank" href="assignment/home.html">Link to Assignment 2</a>
+                        </div>
+                        <div class="chip">
+                            <a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
                         </div>
                     </div>
-	      </div>
-	    </div>
-  	</div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Client Side Development</span>
+                        <p>In the previous assignment I used HTML, CSS, and Bootstrap to create a prototype
+                            of a Web application. The application consisted of several Web static pages that allowed
+                            us to consider navigation, page layout, look and feel. In this assignment you I used
+                            jQuery, one of the most popular JavaScript libraries, to add many dynamic behaviours.
+                            I also used AngularJS to convert the application into a single page application
+                            and become familiar with the Model View Controller design pattern..</p>
+                        <br/>
+                    </div>
+                    <div class="card-action">
+                        <div class="chip">
+                            <a target="_blank" href="assignment/index.html">Link to Assignment 3</a>
+                        </div>
+                        <div class="chip">
+                            <a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Project Proof of Concept</span>
+                        <br/>
+                    </div>
+                    <div class="card-action">
+                        <div class="chip">
+                            <a target="_blank" href="project/client/index.html">Link to POC</a>
+                        </div>
+                        <div class="chip">
+                            <a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.4">GitHub Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Programming The Server</span>
+                        <br/>
+                    </div>
+                    <div class="card-action">
+                        <div class="chip">
+                            <a target="_blank" href="assignment/client/index.html">Link to Assignment 3</a>
+                        </div>
+                        <div class="chip">
+                            <a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.5">GitHub Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Database Programming with MongoDB and Mongoose</span>
+                        <br/>
+                    </div>
+                    <div class="card-action">
+                        <div class="chip">
+                            <a target="_blank" href="assignment/client/index.html">Link to Assignment 4</a>
+                        </div>
+                        <div class="chip">
+                            <a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.6">GitHub Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
-  	<footer class="page-footer grey darken-1">
-    	<div class="container">
-      		<div class="row">
-        		<div class="col l6 s12">
-          			<h5 class="white-text">Bio</h5>
-          			<p class="grey-text text-lighten-4">I am Sagar Neeli, a graduate student at Northeastern University studying Computer Science.</p>
+    <footer class="page-footer grey darken-1">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Bio</h5>
+                    <p class="grey-text text-lighten-4">I am Sagar Neeli, a graduate student at Northeastern University studying Computer Science.</p>
 
 
-        		</div>
-        		<div class="col l3 s12">
-          			<ul>
-            			<li><a class="white-text" href="https://www.linkedin.com/in/sagarneeli">LinkedIn</a></li>
-<!--             			<li><a class="white-text" href="#!">Link 2</a></li>
-			            <li><a class="white-text" href="#!">Link 3</a></li>
-			            <li><a class="white-text" href="#!">Link 4</a></li> -->
-          			</ul>
-        		</div>
-		      </div>
-    	</div>
-    	<div class="footer-copyright">
-      		<div class="container">
-      			© 2015 Copyright Sagar Neeli,
-      			inspiration taken from <a class="orange-text text-lighten-3" href="http://materializecss.com">MaterializeCSS</a>
-      		</div>
-    	</div>
-  	</footer>
+                </div>
+                <div class="col l3 s12">
+                    <ul>
+                        <li><a class="white-text" href="https://www.linkedin.com/in/sagarneeli">LinkedIn</a></li>
+                        <!--             			<li><a class="white-text" href="#!">Link 2</a></li>
+                                                <li><a class="white-text" href="#!">Link 3</a></li>
+                                                <li><a class="white-text" href="#!">Link 4</a></li> -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2015 Copyright Sagar Neeli,
+                inspiration taken from <a class="orange-text text-lighten-3" href="http://materializecss.com">MaterializeCSS</a>
+            </div>
+        </div>
+    </footer>
 
-	<!--Import jQuery before materialize.js-->
+    <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<!-- Compiled and minified JavaScript -->
-  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
 </body>
 </html>
