--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.7/css/perfect-scrollbar.css">
     <link rel="stylesheet" type="text/css" href="css/angular-progress-button-styles.css">
     <link rel="stylesheet" type="text/css" href="css/app-blue.css">
+    <link rel='stylesheet' href='css/TweetList.css' />
     <!-- build:js scripts/vendor.js -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/extras/modernizr.custom.js"></script>
@@ -43,6 +44,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rangy/1.3.0/rangy-selectionsaverestore.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rangy/1.3.0/rangy-serializer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rangy/1.3.0/rangy-textrange.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-sanitize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/textAngular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/textAngular-sanitize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.4.6/textAngularSetup.js"></script>
@@ -54,6 +56,8 @@
     <script type="text/javascript" src="js/angular-translate-loader-static-files.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.7/js/perfect-scrollbar.jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <script src="app.js"></script>
     <script src="js/extras/map.min.js"></script>
     <script src="js/extras/worldmap.js"></script>
@@ -61,6 +65,7 @@
     <script src="views/login/login.controller.js"></script>
     <script src="views/dashboard/dashboard.controller.js"></script>
     <script src="views/dashboard/home/home.controller.js"></script>
+    <script src="views/dashboard/calender/clndrCtrl.js"></script>
     <script src="views/topnav/topnav.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="views/dashboard/tabs/tabs.controller.js"></script>
@@ -69,6 +74,14 @@
     <script src="views/sidebar/sidebar-widgets/sidebar-newsfeed/sidebar-newsfeed.js"></script>
     <script src="views/sidebar/sidebar-widgets/sidebar-profile/sidebar-profile.js"></script>
     <script src="views/sidebar/menu-bar/menu-bar.js"></script>
+    <script src="views/dashboard/trending/app.js"></script>
+    <script src="views/dashboard/trending/geo.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-resource.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.5/masonry.pkgd.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js"></script>
+    <script src="//platform.twitter.com/widgets.js"></script>
+    <script src="views/dashboard/tweets/TweetList.js"></script>
+    <!--<script src="services/services.js"></script>-->
 </head>
 <body ng-app="AniTheme">
 
