User can now tweet and profile image is visible

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -99,6 +99,7 @@
     <script src="//platform.twitter.com/widgets.js"></script>
     <script src="views/dashboard/tweets/TweetList.js"></script>
     <script src="views/dashboard/sentiment/sentiment.js"></script>
+    <script src="services/UserService.js"></script>
     <!--<script src="services/services.js"></script>-->
     <!-- Compiled and minified CSS -->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">-->
