Made changes to UI

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="/bower_components/angular-progress-button-styles/dist/angular-progress-button-styles.min.css" />
     <link rel="stylesheet" type="text/css" href="css/app-blue.css">
     <link rel='stylesheet' href='css/TweetList.css' />
+    <link rel="stylesheet" href="/bower_components/jqcloud2/dist/jqcloud.min.css">
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc5/angular-material.min.css">
     <!--<link rel='stylesheet' href='css/sentiment.css' />-->
     <!--<link href="css/sentiment.css" rel="stylesheet" media="screen">-->
     <!-- build:js scripts/vendor.js -->
@@ -100,6 +102,11 @@
     <script src="views/dashboard/tweets/TweetList.js"></script>
     <script src="views/dashboard/sentiment/sentiment.js"></script>
     <script src="services/UserService.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc7/angular-material.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
+    <script src="js/liquidFillGauge.js" language="JavaScript"></script>
     <!--<script src="services/services.js"></script>-->
     <!-- Compiled and minified CSS -->
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">-->
@@ -126,6 +133,8 @@
  ga('create', 'UA-XXXXX-X');
  ga('send', 'pageview'); */
 </script>
+<script src="/bower_components/jqcloud2/dist/jqcloud.min.js"></script>
+<script src="js/angular-jqcloud.js"></script>
 <!-- build:js scripts/oldieshim.js -->
 <!--[if lt IE 9]>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.2.0/es5-shim.js"></script>
