--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,23 @@
                     </div>
                 </div>
             </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Final Project : TrendCaster</span>
+                        <p>Description about the project and GitHub</p>
+                        <br/>
+                    </div>
+                    <div class="card-action">
+                        <div class="chip">
+                            <a target="_blank" href="project/client/index.html">Link to Project</a>
+                        </div>
+                        <div class="chip">
+                            <a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
